--- a/css/styles.css
+++ b/css/styles.css
@@ -24,15 +24,15 @@ div {
 
 div#details {
     background-color: greenyellow;
-    height: 10vh;
+    height: 3vh;
 }
 
 div#photo-area {
     background-color: lightsalmon;
-    height: 10vh;
+    height: 3vh;
 }
 
 div#vote {
     background-color: lightgrey;
-    height: 10vh;
+    text-align: center;
 }
