updated stylesheet, added html content for image area, added js notes

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 
 header {
     background-color: lightcyan;
-    text-align: center;
+    /* text-align: center; */
 }
 
 h1 {
@@ -17,22 +17,30 @@ h1 {
 }
 
 div {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
+    /* display: flex; */
+    justify-content: space-evenly;
+    /* text-align: center; */
 }
 
 div#details {
     background-color: greenyellow;
-    height: 3vh;
-}
-
-div#photo-area {
-    background-color: lightsalmon;
-    height: 3vh;
 }
 
 div#vote {
     background-color: lightgrey;
-    text-align: center;
+    line-height: 40px;
+    /* text-align: right; */
+}
+div#photo-area {
+    background-color: lightsalmon;
+    /* text-align: center; */
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+    padding: 20px;
+}
+
+img {
+    padding: 10px;
+    display: flex;
 }
